@@ -34,7 +34,6 @@ E(OP_ZoneSpawns)
 // incoming packets that require a DECODE translation:
 D(OP_AdventureMerchantSell)
 D(OP_ApplyPoison)
-//D(OP_AugmentInfo) - needs opcode for conf file update
 D(OP_AugmentItem)
 D(OP_CastSpell)
 D(OP_CharacterCreate)
