@@ -4585,9 +4585,9 @@ struct ItemQuaternaryBodyStruct
 
 struct AugmentInfo_Struct
 {
-/*000*/ uint32	itemid;		// id of the solvent needed
-/*004*/ uint8		window;		// window to display the information in
-/*005*/ uint8		unknown005[71];	// total packet length 76, all the rest were always 00
+/*000*/ uint32	itemid;			// id of the solvent needed
+/*004*/ uint8	window;			// window to display the information in
+/*005*/ uint8	unknown005[71];	// total packet length 76, all the rest were always 00
 /*076*/
 };
 
